- Added CSS for devices < 600 px to have 0 padding on root - Removed viteclient folder from dependabot - Moved Socketprovider in `App` to Routes behind Authguard to avoid rendering errors

--- a/viteclientts/src/App.css
+++ b/viteclientts/src/App.css
@@ -40,3 +40,9 @@
 .read-the-docs {
   color: #888;
 }
+
+@media (max-width: 600px) {
+  #root {
+    padding: 0rem;
+  }
+}
